# smart-fan

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/aio-key/: CMakeLists.txt  Readme.md  aio_key.c  aio_key.h
components/bdc-motor/: CMakeLists.txt  bdc_motor.c  bdc_motor.h
components/high-resolution-timer/: CMakeLists.txt  bdc_timer.c  bdc_timer.h
components/led-control/: CMakeLists.txt  Readme.md  led_control.c  led_control.h
components/led-control/handler/: led_blink_handler.c  led_breath_handler.c  led_control_handler.h  led_off_handler.c  led_on_handler.c
components/led-control/led_control_mode/: led_control_mode.h
components/led-control/service/: led_control_service.c
components/led-control/task/: led_control_task.c
components/lvgl__lvgl/src/: lv_conf_internal.h
components/lvgl__lvgl/src/hal/: lv_hal_tick.c
components/pcnt-driver/: CMakeLists.txt  pcnt_driver.c  pcnt_driver.h
components/st7735/: Kconfig  spi_master_driver.c  spi_master_driver.h  st7735.c  st7735.h
main/: CMakeLists.txt  esp_lvgl_time.c  idf_component.yml  lv_port_disp.c  lv_port_disp.h  main.c  mian.c
main/hardware-driver/: hardware_driver.h  pwm_driver.c
main/pcnt/: bdc_pcnt.c  bdc_pcnt.h
