idf_component_register(SRC_DIRS "."
                                "./hardware-driver/"
                                "./pods/lvgl_ui/"
                                "./pods/lvgl_ui/custom/"
                                "./pods/lvgl_ui/generated/"
                                "./pods/lvgl_ui/generated/guider_customer_fonts/"
                                "./pods/lvgl_ui/generated/guider_fonts/"
                                
                    INCLUDE_DIRS "."
                                 "./hardware-driver/"
                                 "./pods/lvgl_ui/"
                                 "./pods/lvgl_ui/custom/"
                                 "./pods/lvgl_ui/generated/"
                                 "./pods/lvgl_ui/generated/guider_customer_fonts/"
                                 "./pods/lvgl_ui/generated/guider_fonts/"
                    )
