idf_component_register(SRC_DIRS "."
                                "./hardware-driver/"
                                "./pods/lvgl/"
                                "./pods/lvgl/custom/"
                                "./pods/lvgl/generated/"
                                "./pods/lvgl/generated/guider_fonts"
                    INCLUDE_DIRS "."
                                 "./hardware-driver/"
                                 "./pods/lvgl/"
                                 "./pods/lvgl/custom/"
                                 "./pods/lvgl/generated/"
                                 "./pods/lvgl/generated/guider_customer_fonts")
